[package]
name = "maulstrom"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
chrono = "0.4.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.3.3"